--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "axios": "^1.6.8",
+        "html5-qrcode": "^2.3.8",
         "qrcode": "^1.5.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
@@ -22,6 +23,7 @@
         "@vitejs/plugin-react-swc": "^3.5.0",
         "eslint": "^8.57.0",
         "eslint-config-react-app": "^7.0.1",
+        "ngrok": "^5.0.0-beta.2",
         "vite": "^5.2.0",
         "vite-plugin-eslint": "^1.8.1"
     }
